--- a/wp-content/themes/chugach-corp/assets/sass/sections/_stories.scss
+++ b/wp-content/themes/chugach-corp/assets/sass/sections/_stories.scss
@@ -190,4 +190,14 @@
         }
     }
     
+    
+    .slick-arrows {
+        display: flex;
+        margin-bottom: $global-margin;
+        
+        > *:first-child {
+            margin-right: rem-calc(36);   
+        }
+    }
+    
 }
