--- a/wp-content/themes/chugach-corp/assets/sass/sections/_footer-cta.scss
+++ b/wp-content/themes/chugach-corp/assets/sass/sections/_footer-cta.scss
@@ -1,14 +1,14 @@
 // Footer CTA
 
 .section-footer-cta {
-    background-color: #ffffff;
+    background-color: transparent;
     background-image: url(assets/images/footer-cta/background.png);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center top;
     
     .wrap {
-        padding: rem-calc(75 0);   
+        padding: rem-calc(75 0 15);   
         
         h3 {
             color: #fff;
