--- a/wp-content/themes/chugach-corp/assets/sass/template/_page.scss
+++ b/wp-content/themes/chugach-corp/assets/sass/template/_page.scss
@@ -1,44 +1,29 @@
-html, body {
-	height: 100%;
-    
-    .site-content {
-        background: #fff;  
-    }
-      
-}
-
-#wpadminbar {
-    z-index: 999999;   
-}
-
-.page-error-404 {
-    .section-default {
-        padding-top: rem-calc(45);   
-    }
-}
-
-.no-results {
-    padding-top: rem-calc(45);   
-    text-align: center;   
-}
-
 .page-template-default {
  
     .section-hero {
-        background: linear-gradient(270deg, #ED4399 0%, #F9B02D 100%);
+        background: $blue;
         text-align: center;  
         
         .wrap {
-            padding-top: rem-calc(10);   
-        }
-        
-        .edge {
-            line-height: 1;
             
-            img {
-                display: block;   
+            padding: 0;
+            
+            .row {
+                position: relative;
+                
+                @include breakpoint(xxxlarge) {
+                    &:before {
+                        @include three-lines-gray;
+                        position: absolute;
+                        top: -15px;
+                        //left: rem-calc(map-get($grid-column-gutter, large)/2); 
+                        left: -60px;
+                        z-index: 4;  
+                    }                
+                } 
             }
-        }
+              
+        }        
     }
     
     .section.default,
