--- a/wp-content/themes/chugach-corp/assets/sass/utilities/mixins/_theme.scss
+++ b/wp-content/themes/chugach-corp/assets/sass/utilities/mixins/_theme.scss
@@ -1,6 +1,91 @@
 // Theme mixins
 
 
+@mixin photo {
+    position: relative;
+    padding: rem-calc(15);
+    
+    &:before,
+    &:after {
+        content: '';
+        display: block;
+        z-index: -1;
+        height: 140px;
+        width: 270px;
+        position: absolute;
+    } 
+    
+    &:before {
+        background-color: $blue;
+        top: 0;
+        left: 0;
+    }
+    
+    &:after {
+        background-color: $lime;
+        right: 0;
+        bottom: 0;
+    }
+}
+
+@mixin heading-with-icon($color: #fff) {
+    
+    display: flex;
+    flex-wrap: wrap;
+    
+    .icon {
+        flex: 0 0 auto;
+        max-width: 100%;
+        margin-right: rem-calc(18); 
+    }
+    
+    h2 {
+        @include heading-border-bottom($color);
+    }
+    
+    
+}
+
+
+@mixin heading-border-bottom($color: #fff, $position: left ) {
+    position: relative;
+    padding-bottom: 24px;
+    
+    &:before,
+    &:after {
+       content: '';
+       background: $color;
+       display: block;
+       width: 50px;
+       height: 2px;
+       position: absolute;
+    }
+    
+    &:before {
+        bottom: 8px;
+        
+
+        @if $position == center {
+            left: 50%;
+            transform: translateX(-50%);
+        } @else {
+            left: 0;
+        }
+
+    }
+    
+    &:after {
+       bottom: 0;
+       @if $position == center {
+            left: 50%;
+            transform: translateX(-50%);
+            margin-left: 10px;
+        } @else {
+            left: 10px;
+        }
+    }
+}
+
 @mixin fancy-link() {
     
    color: $gray;
@@ -39,6 +124,15 @@
     width: 35px;
     height: 212px;
     background-image: url("data:image/svg+xml,%3Csvg height='212' viewBox='0 0 35 212' width='35' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd' stroke='%23fff' stroke-linecap='square' stroke-width='2' transform='matrix(0 1 -1 0 34.5 .5)'%3E%3Cpath d='m1.25384615.5h160.66853285'/%3E%3Cpath d='m1.25595238 17.5h208.48809562'/%3E%3Cpath d='m1.25531915 33.5h115.48936185'/%3E%3C/g%3E%3C/svg%3E");  
+    background-size: contain; 
+    background-repeat: no-repeat;
+}
+
+@mixin three-lines-gray {
+    content: '';
+    width: 35px;
+    height: 212px;
+    background-image: url("data:image/svg+xml,%3Csvg height='212' viewBox='0 0 35 212' width='35' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd' stroke='%23ececec' stroke-linecap='square' stroke-width='2' transform='matrix(0 1 -1 0 34.5 .5)'%3E%3Cpath d='m1.25384615.5h160.66853285'/%3E%3Cpath d='m1.25595238 17.5h208.48809562'/%3E%3Cpath d='m1.25531915 33.5h115.48936185'/%3E%3C/g%3E%3C/svg%3E");  
     background-size: contain; 
     background-repeat: no-repeat;
 }
@@ -102,11 +196,10 @@
         
     li {
         position: relative;
-        
         min-height: 24px;
         padding: 0 0 5px 40px;
         line-height: inherit;
-        margin-bottom: 5px;
+        margin: rem-calc(0 auto 5 0);
         
         &:before {
             content: '';
