--- a/wp-content/themes/chugach-corp/assets/sass/template/_contact.scss
+++ b/wp-content/themes/chugach-corp/assets/sass/template/_contact.scss
@@ -2,6 +2,14 @@
 
 .template-contact {
     
+    .section-hero {
+        .shape {            
+            &.cover {
+                z-index: 3; 
+            }
+        }
+    }
+    
     @include breakpoint(large) {
         .row .shrink {
             flex: 0 0 auto!important;
@@ -10,35 +18,56 @@
     }
     
     .site-main {
-             
+        
+        @include breakpoint(large) {
+             > .row:first-child {
+                    flex-flow: row nowrap;
+                    
+                    > .column:last-child {
+                        flex: 0 0 50vw;
+                        max-width: none;
+                        padding: 0;   
+                    }
+             }
+        }
     }
     
     .section-form {
         @include breakpoint(large) {
             .entry-content {
-                padding: rem-calc(0 map-get($grid-column-gutter, large)*2);     
+                padding-right: rem-calc(map-get($grid-column-gutter, large)*2);     
             }
+        }
+        
+        .social-icons {
+            margin-bottom: rem-calc(20);   
         }
     }
     
     .section-map {
         
-        @include breakpoint(large) {
-            .map-container {
-                position: relative;
-                height: 500px;
+        .map-container {
+            position: relative;
+            height: 400px;
+            
+            @include breakpoint(large) {
+                height: calc(600px + 6.2vw);
+                margin-top: -6.2vw;
+            
+            }
+            
+            z-index: 2;
+            
+            .wpgmza_map {
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
                 
-                .wpgmza_map {
-                    position: absolute;
-                    top: 0;
-                    left: 0;
+                iframe {
                     width: 100%;
                     height: 100%;
-                    
-                    iframe {
-                        width: 100%;
-                        height: 100%;
-                    }
                 }
             }
         }
@@ -47,18 +76,55 @@
     .section-directory,
     .section-businesses {
         @include breakpoint(large) {
-            margin-top: rem-calc(45);
+            margin: rem-calc(45 auto);
         }
     }
     
     .section-directory {
-        @include breakpoint(large) {
-            .entry-content {
-                padding-left: rem-calc(map-get($grid-column-gutter, large)*2);     
+        
+        .accordion-item {
+            border-top: 1px solid #EFF3F1; 
+            border-right: 1px solid #EFF3F1; 
+            border-left: 1px solid #EFF3F1; 
+            
+            &:last-child {
+                border-bottom: 1px solid #EFF3F1;    
+            }
+            
+            &.is-active .accordion-content {
+                background: #eff3f1;   
             }
         }
-    
     }
     
-    
+    .section-businesses {
+        
+        .row {
+            border-top: 1px solid #EFF3F1;
+            border-left: 1px solid #EFF3F1;
+            
+            .column {
+                border-right: 1px solid #EFF3F1;
+                border-bottom: 1px solid #EFF3F1;   
+            }
+        }
+        
+        .logo {
+            height: 120px;
+            padding: rem-calc(0 35);
+            display: flex;
+            justify-content: center;
+            align-items: center;  
+            transition: all 0.5s ease;   
+            cursor: pointer; 
+            
+            img {
+                filter: grayscale(100%);
+            }
+            
+            &:hover img {
+                filter: grayscale(0%);
+            }
+        }
+    }
 }
