--- a/wp-content/themes/chugach-corp/assets/sass/template/_leadership.scss
+++ b/wp-content/themes/chugach-corp/assets/sass/template/_leadership.scss
@@ -12,7 +12,7 @@
                 &:after {
                     @include two-lines-horizontal;
                     display: block;
-                    margin: 0 auto;   
+                    margin: rem-calc(12) auto 0;   
                 }
             }
         }
