--- a/wp-content/themes/chugach-corp/assets/sass/template/_post.scss
+++ b/wp-content/themes/chugach-corp/assets/sass/template/_post.scss
@@ -5,79 +5,9 @@
     .content-area {
         margin-bottom: rem-calc(45);   
     }
- 
-    .section-hero {
-        
-        background-color: $dark-gray;
-        
-        
-        .background-image {
-            position: relative;
-                        
-            @include breakpoint(large) {
-                padding: rem-calc(66 0 0); // sticky header height
-            }
-            
-            &:after {
-                content: '';
-                display: block;
-                width: 100%;
-                height: 100%;
-                position: absolute;
-                top: 0;
-                left: 0;
-                background: linear-gradient(270deg, rgba(#ED4399, .8) 0%, rgba(#065D7F, .8) 100%);
-            }
-        }
-        
-        .row {
-            min-height: 33vw;   
-            position: relative;
-            z-index: 2;
-        }
-        
-        .shape {
-            position: relative;
-            z-index: 1;
-            line-height: 0;
-            bottom: 5%;
-            
-            svg,
-            img {
-                display: block;
-                position: absolute;
-                bottom: -2px;   
-            }
-        }
-    }
     
     .section-hero {
-        
-        .row {
-            padding: rem-calc(45px 0 75px 0);  
-        }
-        
-        text-align: center;
-        
-        .caption {
-            margin: 0 auto;
-            padding-bottom: rem-calc(15);
-            @include breakpoint(large) {
-                max-width: rem-calc(980);
-            }
-        }
-        
-        h1 {
-            color: #fff;
-            margin-bottom: 15px;
-        }
-        
-        p {
-            color: #fff;  
-            font-size:20px;
-            line-height: 24px;               
-        }
-        
+
         ul.post-categories {
             @include list-reset;
             display: inline-block;            
@@ -86,7 +16,6 @@
             min-width: inherit;
             padding-left: 30px;
             padding-right: 30px;
-            margin-bottom: rem-calc(20);
             margin-left: 40px;
             margin-right: 40px;
             
@@ -94,26 +23,26 @@
                 display: inline-block;
                 a {
                     @include button;
-                    @include button-secondary;
+                    @include button-primary;
                     min-width: 160px;
                 }
             }
         }
         
         .posted-on {
+            margin-top: rem-calc(25);
+            display: block;
             color: #fff;
-            font-size: 15px;
+            font-size: rem-calc(18);
             line-height: 18px;   
-            font-weight: 300;
+            font-family: $georgia;
+            font-style: italic;
         }
         
     }
                 
     article {
-        
-        padding: 75px 0 0 0;
-        position: relative;
-        
+                
         .post-author {
             position: relative;
             width: 100%;
@@ -158,7 +87,7 @@
                     padding-right: 8px;
                     padding-left: 3px; 
                     font-family: $header-font-family;
-                    color: $blue;
+                    color: $dark-gray;
                     position: relative;
                     top: 8px;
                 } 
@@ -196,7 +125,9 @@
         }
         
         h3 {
-            color: $blue; 
+            color: $med-gray; 
+            letter-spacing: 0.7px;
+            font-style: normal;
             overflow: hidden;
             margin-bottom: 15px; 
             text-align: center;
@@ -211,7 +142,7 @@
               content: '';
               position: absolute;
               height: auto;
-              border-top: 1px solid #9c9c9c;
+              border-top: 1px solid #D7D5D5;
               top: 50%;
               transform: translateY(-50%);
               width: 999em;
