--- a/wp-content/themes/chugach-corp/assets/sass/template/who-we-are.scss
+++ b/wp-content/themes/chugach-corp/assets/sass/template/who-we-are.scss
@@ -103,6 +103,7 @@
                 .slider {
                     opacity: 1;
                     visibility: visible;
+                    height: auto;
                 }
             
                 .close-slider {
@@ -284,7 +285,7 @@
                 visibility: hidden;
                 position: relative;
                 width: 100%;
-                height: 100%;
+                height: 0;
                 top: 0;
                 left: 100%;
                 margin-left: -100%;
