--- a/wp-content/themes/chugach-corp/assets/sass/template/index.scss
+++ b/wp-content/themes/chugach-corp/assets/sass/template/index.scss
@@ -19,3 +19,10 @@
 @import 'history';
 
 @import 'shareholders';
+
+@import 'regions';
+
+@import 'portfolio';
+@import 'operating-companies';
+@import 'land-resources';
+@import 'investment-portfolio';
