--- a/wp-content/themes/chugach-corp/assets/sass/sections/_hero.scss
+++ b/wp-content/themes/chugach-corp/assets/sass/sections/_hero.scss
@@ -11,13 +11,14 @@
         z-index: 2;
         line-height: 0;
         left: 0;
-        bottom: 0;
+        bottom: -1px;
         width: 100%;
         
         svg,
         img {
             display: block;
             line-height: 0;
+            width: 100%;
         }
     }
     
