--- a/wp-content/themes/chugach-corp/assets/sass/structure/_modal.scss
+++ b/wp-content/themes/chugach-corp/assets/sass/structure/_modal.scss
@@ -21,6 +21,8 @@
     padding-top: 40px;
     
     .close-button {
+        font-family: sans-serif;
+        font-weight: 300;
 		position: absolute;
 		top: rem-calc(-5)!important; 
 		right: rem-calc(10px);
