--- a/wp-content/themes/chugach-corp/assets/sass/utilities/mixins/_theme.scss
+++ b/wp-content/themes/chugach-corp/assets/sass/utilities/mixins/_theme.scss
@@ -1,5 +1,27 @@
 // Theme mixins
 
+@mixin link-arrow( $color: #999, $position: left ) {
+    content: '';
+    display: block;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 31px;
+    height: 22px; 
+    background-size: auto 22px;
+    
+    $color: str-replace(#{$color}, '#', '');  
+    
+    @if $position == 'left' {
+
+        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' version='1.1' viewBox='0 0 31 22'%3E%3Cg fill='none' fill-rule='evenodd' stroke='none' stroke-width='1' transform='translate(-231.000000, -1931.000000) translate(245.500000, 1941.000000) rotate(-180.000000) translate(-245.500000, -1941.000000) translate(211.000000, 1908.000000) translate(20.000000, 21.000000)'%3E%3Cpath class='arrow' fill='%23#{$color}' d='M16 22a1 1 0 0 0 2 0l11-10a1 1 0 0 0 0-2L18 0h-2v2l10 9-10 9v2z'/%3E%3Cpath class='line' stroke='%23#{$color}' stroke-linecap='square' stroke-width='3' d='M26 11H0'/%3E%3C/g%3E%3C/svg%3E"); 
+
+   } @else {
+        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' version='1.1' viewBox='0 0 31 22'%3E%3Cdefs%3E%3Cpolygon id='a' points='0 0 0 65 65 65 65 0 0 0'/%3E%3C/defs%3E%3Cg fill='none' fill-rule='evenodd' stroke='none' stroke-width='1' transform='translate(-376.000000, -1239.000000) translate(358.000000, 1218.000000)'%3E%3Cg/%3E%3Cpath class='arrow' fill='%23#{$color}' d='M36 43a1 1 0 0 0 2 0l11-10a1 1 0 0 0 0-2L38 21h-2v2l10 9-10 9v2z'/%3E%3Cpath class='line' stroke='%23#{$color}' stroke-linecap='square' stroke-width='3' d='M46 32H20'/%3E%3C/g%3E%3C/svg%3E");
+   }
+    
+}
+
 
 @mixin photo {
     position: relative;
