--- a/wp-content/themes/chugach-corp/assets/sass/template/_land-resources.scss
+++ b/wp-content/themes/chugach-corp/assets/sass/template/_land-resources.scss
@@ -241,11 +241,10 @@
                         &:after {
                             content: '';
                             display: block;
-                            margin-top: 15px;
                             width: 45px;
                             height: 2px;
                             background: $lime;  
-                            margin: 0 auto; 
+                            margin: rem-calc(5) auto 0; 
                         }
                     }
                 }
